--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<script type='module' src='https://us-east-1.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://us-east-1.online.tableau.com/t/xren43915-05c3835a3b/views/firsttry/1' width='775' height='656' hide-tabs toolbar='bottom' ></tableau-viz>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tableau Visualization</title>
+    <script type="module" src="https://us-east-1.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
+</head>
+<body>
+    <h1>Tableau Visualization</h1>
+    <tableau-viz 
+        id="tableau-viz" 
+        src="https://us-east-1.online.tableau.com/t/xren43915-05c3835a3b/views/firsttry/1" 
+        width="775" 
+        height="656" 
+        hide-tabs 
+        toolbar="bottom">
+    </tableau-viz>
+</body>
+</html>
+
