--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> First Try on Tableau Visualization</title>
-    <script type="module" src="https://us-east-1.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
+    <title>Tableau Visualization</title>
+    <script type="text/javascript" src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
 </head>
 <body>
-    <h1>Tableau Visualization</h1>
-    <tableau-viz 
-        id="tableau-viz" 
-        src="https://us-east-1.online.tableau.com/t/xren43915-05c3835a3b/views/firsttry/1" 
-        width="775" 
-        height="656" 
-        hide-tabs 
-        toolbar="bottom">
-    </tableau-viz>
+    <div class="tableauPlaceholder" id="viz1737686615254" style="position: relative;">
+        <noscript>
+            <a href="#">
+                <img alt="Gov data" 
+                     src="https://public.tableau.com/static/images/Go/Govdata/1/1_rss.png" 
+                     style="border: none;">
+            </a>
+        </noscript>
+        <object class="tableauViz" style="display: none;">
+            <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="Govdata/1" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param name="static_image" value="https://public.tableau.com/static/images/Go/Govdata/1/1.png" />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="zh-CN" />
+        </object>
+    </div>
+    <script type="text/javascript">
+        var divElement = document.getElementById('viz1737686615254');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width = '100%';
+        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+    </script>
 </body>
 </html>
+
 
